--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="tinkoffbank://Main/ShowCustomStory?storyId=35734">!!!</a>
+    <a href="tinkoffbank://Main/ShowCustomStory?storyId=35734">!!!!!!</a>
 </body>
 
 </html>
