--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <a href="tinkoffbank://Main/ShowCustomStory?storyId=35734">!!!!!!</a>
+    <a href="tinkoffbank://Main/ShowCustomStory?storyId=35734">!!!!!!</a>
 </body>
 
 </html>
